hphp/hack/test/typecheck/deprecated_attr_bad.php.exp
File "deprecated_attr_bad.php", line 3, characters 16-18:
User-defined constants are not allowed in user attribute expressions (Parsing[1002])
